--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,11 @@
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# builds, cache and idea
+.idea/
+.gradle/
+gradlew
+gradlew.bat
 
 # Package Files #
 *.jar
