feat: part 1 of the database model

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,7 @@
-kotlin.incremental=true
 org.gradle.parallel=true
+kotlin.incremental=true
+
+ksp.incremental = false
+
 org.gradle.jvmargs=-Xmx2G
 
