feat: Osu api settings

--- a/example.env
+++ b/example.env
@@ -37,6 +37,9 @@ API_IMGHOARD_TOKEN=
 
 API_THECATAPI_APIKEY=
 
+API_OSU_CLIENTID=
+API_OSU_SECRET=
+
 # kubernetes probing server, used for checking status and safely shutting down
 PROBESERVER_ENABLED=FALSE
 PROBESERVER_PORT=11811
